# mdxjs-py

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml  release.yml  workflow.yml
src/: lib.rs
tests/: test_compile.py  test_e2e_mdx.py
tests/fixtures/: sample_e2e.mdx
