[package]
name = "mdxjs_py"
version = "0.1.0-alpha.1"
description = "Python bindings for mdxjs-rs - Fast MDX to JavaScript compilation"
license = "MIT"
repository = "https://github.com/samdc73/mdxjs-py"
homepage = "https://github.com/samdc73/mdxjs-py"
readme = "README.md"
keywords = ["mdx", "markdown", "python", "binding"]
categories = ["text-processing", "compilers"]

[lib]
name = "mdxjs_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
mdxjs = "0.2"

[profile.release]
lto = true
