[package]
name = "mdxjs_py"
version = "0.1.0-alpha.2"
edition = "2021"
description = "Python bindings for mdxjs-rs - Fast MDX to JavaScript compilation"
license = "MIT"
repository = "https://github.com/SamDc73/mdxjs-py"
homepage = "https://github.com/SamDc73/mdxjs-py"
readme = "README.md"
keywords = ["mdx", "markdown", "python", "binding"]
categories = ["text-processing", "compilers"]

[lib]
name = "mdxjs_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py38"] }
mdxjs = "0.2"

[profile.release]
lto = true
