[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mdxjs-py"
version = "0.1.0a2"
description = "Python bindings for mdxjs-rs - Fast MDX to JavaScript compilation via Rust"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["mdx", "markdown", "jsx", "compiler", "rust", "mdxjs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/SamDc73/mdxjs-py"
Documentation = "https://github.com/SamDc73/mdxjs-py#readme"
Repository = "https://github.com/SamDc73/mdxjs-py"
Issues = "https://github.com/SamDc73/mdxjs-py/issues"
Changelog = "https://github.com/SamDc73/mdxjs-py/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]